--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dev_dependencies:
     sdk: flutter
   http: ^0.12.0+4
   progress_dialog: ^1.2.3
+  pull_to_refresh: ^1.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
