--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.12.0+4
+  progress_dialog: ^1.2.3
+  pull_to_refresh: ^1.6.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,9 +35,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  http: ^0.12.0+4
-  progress_dialog: ^1.2.3
-  pull_to_refresh: ^1.6.1
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  image_path: "assets/images/app_main_logo.jpg"
+  android: true
+  ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
